<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".Activity.CreditActivity">

    <ImageView
        android:id="@+id/bs_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:contentDescription="@string/LogoDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bs_pic_background" />

    <Button
        android:id="@+id/pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="25sp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/CreditPayButtonTexr"
        android:backgroundTint="@color/button_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bs_image"
        />

    <CheckBox
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:buttonTint="@color/button_color"
        android:text="@string/ConfirmCreditCheckboxText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@id/pay"
        />

    <TextView
        android:id="@+id/credit_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credit_info"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="17sp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/pay"
        app:layout_constraintEnd_toEndOf="@id/pay"
        app:layout_constraintTop_toBottomOf="@id/confirm"
        />

    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/pay"
        app:layout_constraintEnd_toEndOf="@id/pay"
        app:layout_constraintTop_toBottomOf="@id/credit_info"
        />

    <TextView
        android:id="@+id/alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credit_alert"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/alert"
        android:textSize="17sp"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="@id/pay"
        app:layout_constraintEnd_toEndOf="@id/pay"
        app:layout_constraintTop_toBottomOf="@id/address"
        />

</androidx.constraintlayout.widget.ConstraintLayout>