<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context="ru.bsvyazi.bsconnect.Activity.LoginActivity">

    <ImageView
        android:id="@+id/bs_image"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:contentDescription="@string/LogoDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bs_logo" />

    <EditText
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/PhoneNumberPrompt"
        android:gravity="start|top"
        android:inputType="textVisiblePassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bs_image"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/getSms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/GetSmsCode"
        android:backgroundTint="@color/button_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login"
        />

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text=""
        app:layout_constraintStart_toStartOf="@id/getSms"
        app:layout_constraintEnd_toEndOf="@id/getSms"
        app:layout_constraintTop_toBottomOf="@id/getSms"
        />

    <TextView
        android:id="@+id/messageLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/LognPasswordAutorization"
        android:textColor="@color/button_color"
        app:layout_constraintStart_toStartOf="@id/message"
        app:layout_constraintEnd_toEndOf="@id/message"
        app:layout_constraintTop_toBottomOf="@id/message"
        />

    <ImageView
        android:id="@+id/vk_image"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:contentDescription="@string/LogoDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/messageLogin"
        app:srcCompat="@drawable/vk_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>